Deploying Login Page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Frontend - Hello World</title>
+    <title>Frontend - Login</title>
   </head>
   <body>
-    <h1>Hello World from Frontend!</h1>
+    <h1>Login</h1>
+    <form id="loginForm">
+      <input type="text" id="username" placeholder="Username" required />
+      <input type="password" id="password" placeholder="Password" required />
+      <button type="submit">Login</button>
+    </form>
     <p id="response"></p>
+    
     <script>
-      fetch('http://localhost:3000/api/hello')  // Request to backend
-        .then((response) => response.json())
-        .then((data) => {
-          document.getElementById('response').textContent = data.message;
+      document.getElementById('loginForm').addEventListener('submit', async function(event) {
+        event.preventDefault();
+        
+        const username = document.getElementById('username').value;
+        const password = document.getElementById('password').value;
+
+        const response = await fetch('http://localhost:3000/api/login', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({ username, password })
         });
+
+        const data = await response.json();
+        document.getElementById('response').textContent = data.message;
+      });
     </script>
   </body>
 </html>
+
